refactor: reorganize images folder and update image paths in codebase

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SFW Content Manager</title>
+    <title>SFW - Content Manager</title>
+    <link
+      href="/images/page/kepler-favicon.png"         
+      rel="icon"
+      type="image/vnd.microsoft.icon"
+    />
   </head>
   <body>
     <!-- Include the script that builds the page and powers Decap CMS -->
