--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -7,7 +7,7 @@
     <link
       href="/images/page/kepler-favicon.png"         
       rel="icon"
-      type="image/vnd.microsoft.icon"
+      type="image/png"
     />
   </head>
   <body>
