--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{ .Site.Title }} - Content Manager</title>
+    <title>SFW - Content Manager</title>
     <link
       href="/images/page/kepler-favicon.png"         
       rel="icon"
