style: format code

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SFW - Content Manager</title>
-    <link
-      href="/images/page/kepler-favicon.png"         
-      rel="icon"
-      type="image/png"
-    />
+    <link href="/images/page/kepler-favicon.png" rel="icon" type="image/png" />
   </head>
   <body>
     <!-- Include the script that builds the page and powers Decap CMS -->
